fixed overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,6 +12,7 @@ $color4: #EEEEEE;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 
 
